--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
   },
   "dependencies": {
     "@sparticuz/chromium": "^119.0.0",
+    "@sparticuz/chromium-min": "^112.0.2",
     "next": "14.0.4",
-    "puppeteer-core": "^21.6.0",
+    "puppeteer-core": "^20.0.0",
     "react": "^18",
     "react-dom": "^18"
   },
