--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@sparticuz/chromium-min": "^119.0.0",
     "next": "14.0.4",
+    "@sparticuz/chromium-min": "^119.0.0",
+    "puppeteer": "10.1.0",
     "puppeteer-core": "^21.6.1",
     "react": "^18",
     "react-dom": "^18"
